原始功能基本完成

--- a/启动系统.md
+++ b/启动系统.md
@@ -49,11 +49,72 @@ npm run serve
 ## 测试命令
 
 ```bash
-# 创建话题分析任务
-curl "http://127.0.0.1:8181/api/tag/add_task?tag=春节&is_hot=true&page_num=1"
+# 创建话题分析任务（推荐：限制3-5页避免反爬）
+curl "http://127.0.0.1:8181/api/tag/add_task?tag=春节&is_hot=true&page_num=3"
 
 # 查看任务列表
 curl "http://127.0.0.1:8181/api/tag/tag_list"
+
+# 查看Celery任务执行日志
+tail -f ~/code/graduation/Topic_and_user_profile_analysis_system/code/back_end/celery.log
+```
+
+## 常见问题排查
+
+### 前端没有显示热度图/关系图
+**症状**: 只显示10条微博和词云，其他部分空白
+
+**原因**: 
+1. **搜索页数过多触发反爬**（如12页）→ 返回空数据
+2. **评论爬取失败**（Cookie invalid）→ 没有评论数据无法聚类
+
+**解决方案**:
+```bash
+# 1. 检查服务状态
+ps aux | grep -E "weibo_curl_api|celery.*worker"
+
+# 2. 观察Celery日志（如果爬虫任务<1秒结束说明没数据）
+tail -f ~/code/graduation/Topic_and_user_profile_analysis_system/code/back_end/celery.log
+
+# 3. 重新搜索，限制3-5页
+# 在前端搜索框输入: "春节" 或 "AI技术"，只搜索前3页
+```
+
+### weibo_curl_api返回Cookie invalid
+**症状**: Celery日志显示 "Warning: 微博xxx爬取失败: Cookie invalid."
+
+**原因**: Cookie过期
+
+**解决方案（只需PC端Cookie）**:
+```bash
+# 1. 获取PC端Cookie
+# 访问 https://s.weibo.com 或 https://weibo.com
+# 登录后，F12 → Network → 复制任意请求的Cookie
+
+# 2. 更新配置
+cd ~/code/graduation/Topic_and_user_profile_analysis_system/code/weibo_crawler
+nano account/account.json
+# 粘贴刚才复制的Cookie到 "cookies" 数组
+
+# 3. 重启weibo_curl_api
+pkill -f weibo_curl_api
+source ~/miniconda3/etc/profile.d/conda.sh && conda activate graduation
+python weibo_curl_api.py
+
+# 4. 验证Cookie有效
+curl "http://127.0.0.1:8001/weibo_curl/api/search_tweets?keyword=测试&cursor=1"
+```
+
+**注意**：系统已升级为统一使用PC端Cookie，不再需要移动端Cookie（_T_WM字段）！
+
+**快捷更新Cookie脚本**：
+```bash
+# 方式1：使用自动更新脚本（推荐）
+cd ~/code/graduation/Topic_and_user_profile_analysis_system/code/weibo_crawler
+python update_cookie.py  # 根据提示粘贴PC端Cookie
+
+# 方式2：手动编辑配置文件
+nano account/account.json
 ```
 
 ## 停止服务
